[package]
name = "buffman_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
slab = "0.4.11"
quickcheck = { version = "1.0.3", optional = true, default-features = false }
quickcheck_macros = { version = "1.1.0", optional = true, default-features = false }

[profile.bench]
debug = true

[profile.release]
debug = true

[features]
testing = ["dep:quickcheck", "dep:quickcheck_macros"]

[dev-dependencies]
buffman_tree = { path = "", features = ["testing"] }
rand = "0.9.2"
rand_xoshiro = "0.7.0"
